Name: gac
Version: 0.3
License: MIT
License-File: LICENSE
Author:  Ilias Tsitsimpis
Maintainer: iliastsi@hotmail.com
Synopsis: Alan Compiler written in Haskell
Description:
    Alan Compiler written in Haskell
    using Alex as a lexer
    and Happy as a parser
Category: Development
Build-Type: Custom
Cabal-Version: >= 1.6
Tested-With: GHC

Extra-Source-Files:
    Makefile
    INSTALL
    README
    HACKING
    TODO
    docs/*.pdf
    docs/*.html
    docs/alex-html/*.html
    docs/alex-html/*.css
    docs/happy/*.html
    docs/happy/*.css
    testsuite/*.alan

Extra-Tmp-Files: src/parser/Parser.info

source-repository head
    type:     mercurial
    location: http://foss.ntua.gr/hg/private/gac


Executable gac
  Main-is: Main.hs
  Build-Tools: happy, alex

  Build-Depends: base
  Build-Depends: array
  if os(windows)
     Build-Depends: Win32
  else
     Build-Depends: unix

  GHC-Options: -Wall -Wwarn -w -O

  Hs-Source-Dirs:
        src
        src/parser
        src/basicTypes
        src/utils
        src/typecheck
        src/main
  Other-Modules:
        Parser
        Lexer
        ----------
        ErrUtils
        SrcLoc
        TypedAst
        UnTypedAst
        ----------
        Bag
        MonadUtils
        Util
        ----------
        SymbolTable
        TcMonad
        ----------
        Outputable
